# tauri_demo

./: README.md  bun.lockb  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
